--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Make sure the script is loaded after the DOM is built. -->
+    <script src="script.js" defer></script>
+
     <title>Rock - Paper - Scissors</title>
 </head>
 <body>
-    <script src="script.js"></script>
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
 </body>
 </html>
